--- a/style.css
+++ b/style.css
@@ -20,10 +20,26 @@ header img {
 h1 {
   font-size: 3em;
   line-height: 1.2em;
-  margin-top: 0.75em;
+  text-align: center;
+  margin: auto;
+  width: 50%;
+
 }
+h2 {
+  font-size: 1em;
+  line-height: 1em;
+  text-align: center;
+  margin: auto;
+  width: 40%;
+}
+
 p {
-  max-width: 60em;
+  font-size: 0.8;
+  line-height: 1em;
+  text-align: center;
+  margin: auto;
+  width: 50%;
+ 
 }
 p.goback {
   clear: left;
@@ -66,3 +82,7 @@ a:hover, a:focus, a:active {
   color: #C00;
 }
 
+main.player {
+  margin: auto;
+  width: 50%;
+}
